# Evolution

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
src/: CMakeLists.txt  Evolution.c  Evolution.h  evolution.c  evolution.h  sort.c  sort.h
test/: last_test.c  optimation-test.rb  pthread-vs-thread-clients-tsp.rb  pthread-vs-thread-clients.rb  test-only-mutate.c  test-parallel.c  test-use-recombination.c  test.c  tsp.c  tsp.h
